--- a/FrontEnd/src/Pages/Favorites/style.module.css
+++ b/FrontEnd/src/Pages/Favorites/style.module.css
@@ -3,11 +3,11 @@
     display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 30px;
+      .card{
+        img{
+          width: 200px;
+        }
+        
+      }
     
 }
-
-@media screen and (max-width: 1080px) {
-    .cards{
-
-    }
-  }
