--- a/FrontEnd/src/Pages/Home/style.module.css
+++ b/FrontEnd/src/Pages/Home/style.module.css
@@ -152,7 +152,7 @@
       .card {
         position: relative;
         img{
-          width: 100%;
+          width: 220px;
         }
         b{
             cursor: pointer;
